# web-chat-interface

./: .env copy  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  index.html  package-lock.json  package.json  vite.config.ts
backend/: Dockerfile  config.py  main.py  pyproject.toml
src/: App.tsx  index.css
src/api/: axios.ts
src/components/: ChatInput.tsx  ChatWindow.tsx  DeleteSession.tsx  HomeImg.tsx  SessionItem.tsx  SessionSetting.tsx  SessionSideBar.tsx  SideBar.tsx
src/components/session_setting/: BotModeSelect.tsx  ManualModeContent.tsx  ModeContent.tsx  OpenAIModeContent.tsx  OperationManual.tsx
src/components/session_setting/operation_guide/: CustomizeGuide.tsx  OllamaGuide.tsx  OpenAIGuide.tsx  OperationManual.css
src/components/session_setting/session_mode/: CustomizeModeContent.tsx  ManualModeContent.tsx  OllamaModeContent.tsx  OpenAIModeContent.tsx
src/theme/: muiTheme.ts
src/utils/: sendMessage.ts
src/utils/mode_request/: customizeAPI.ts  ollamaAPI.ts  openaiAPI.ts
